--- a/index.html
+++ b/index.html
@@ -129,17 +129,24 @@
                         <p class="text-gray-700">सायं. 05:00 ते रात्री 10:00 पर्यंत</p>
                         <p class="font-bold mt-2 text-red-600">रविवार बंद राहील</p>
                     </div>
-                    <div class="bg-purple-100 p-4 rounded-lg shadow-sm">
+                    <div class="bg-purple-100 p-4 rounded-lg shadow-sm mb-4">
                         <h3 class="font-semibold text-xl text-purple-700">Address</h3>
-                        <p class="mt-2 text-gray-700">ऑस्टिया, शॉप नं 5, ग्राउंड फ्लॊअर, ॲक्सिस बँक शेजारी, आळंदी मोशी रोड, डुडूळगाव, 412105</p>
+                        <p class="mt-2 text-gray-700">
+                            <a href="https://maps.google.com/?cid=8119863676939069856&g_mp=Cidnb29nbGUubWFwcy5wbGFjZXMudjEuUGxhY2VzLlNlYXJjaFRleHQ" target="_blank" rel="noopener noreferrer" class="text-purple-600 hover:underline">
+                                ऑस्टिया, शॉप नं 5, ग्राउंड फ्लॊअर, ॲक्सिस बँक शेजारी, आळंदी मोशी रोड, डुडूळगाव, 412105
+                            </a>
+                        </p>
                     </div>
+                    <a href="https://www.google.com/maps/dir//DR.+TRUPTI'S+Health+%26+Beauty+Clinic,+shop+no.-5,+Ground+floor,+Destination+Ostia,+Alandi+-+Moshi+Road,+near+axis+bank,+near+Y+junction,+Dudulgaon,+Pimpri-Chinchwad,+Maharashtra,+India/data=!4m9!4m8!1m0!1m5!1m1!19sChIJa2KJuhrJwjsRoOmMSP6Mr3A!2m2!1d73.8675298!2d18.679399099999998!3e0" target="_blank" rel="noopener noreferrer">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7559.313247017506!2d73.8580021262169!3d18.679398561088146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c91aba89626b%3A0x70af8cfe488ce9a0!2sDR.%20TRUPTI'S%20Health%20%26%20Beauty%20Clinic!5e0!3m2!1sen!2sin!4v1758115153979!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="rounded-lg shadow-md"></iframe>
+                    </a>
                     <p class="mt-6 text-xl font-bold text-purple-800 text-center">For Appointment: 9511291664</p>
                 </section>
             </div>
         </main>
 
         <footer class="bg-purple-800 text-white text-center py-4 mt-8 rounded-xl shadow-lg">
-            <p>&copy; 2025 Dr. Trupti's Health & Beauty Clinic. All Rights Reserved.</p>
+            <p>© 2025 Dr. Trupti's Health & Beauty Clinic. All Rights Reserved.</p>
         </footer>
     </div>
 </body>
